--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
